--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Resume</title>
 </head>
 <body>
-    <img src="img/cv_page-0001.jpg" alt="error">
+    <img src="cv_page-0001.jpg" alt="error">
     
 </body>
 </html>
